Fix sonar warnings Part 1 (#521)
Signed-off-by: Lilian Houdelet <lhoudelet@oxyl.fr>
Signed-off-by: Slimane AMAR <amarsli@gm0winl104.bureau.si.interne>