@@ -55,11 +55,9 @@ public class NetworkModificationTreeService {
 
     private final NetworkModificationNodeInfoRepository networkModificationNodeInfoRepository;
 
-    @Autowired
-    private NetworkModificationService networkModificationService;
+    private final NetworkModificationService networkModificationService;
 
-    @Autowired
-    private NotificationService notificationService;
+    private final NotificationService notificationService;
 
     @Autowired
     private NetworkModificationTreeService self;
@@ -67,10 +65,14 @@ public class NetworkModificationTreeService {
     @Autowired
     public NetworkModificationTreeService(NodeRepository nodesRepository,
                                           RootNodeInfoRepository rootNodeInfoRepository,
-                                          NetworkModificationNodeInfoRepository networkModificationNodeInfoRepository
+                                          NetworkModificationNodeInfoRepository networkModificationNodeInfoRepository,
+                                          NetworkModificationService networkModificationService,
+                                          NotificationService notificationService
     ) {
         this.nodesRepository = nodesRepository;
         this.networkModificationNodeInfoRepository = networkModificationNodeInfoRepository;
+        this.networkModificationService = networkModificationService;
+        this.notificationService = notificationService;
         repositories.put(NodeType.ROOT, new RootNodeInfoRepositoryProxy(rootNodeInfoRepository));
         repositories.put(NodeType.NETWORK_MODIFICATION, new NetworkModificationNodeInfoRepositoryProxy(networkModificationNodeInfoRepository));
 
@@ -214,7 +216,7 @@ public class NetworkModificationTreeService {
         Optional<NodeEntity> nodeToMoveOpt = nodesRepository.findById(nodeToMoveUuid);
         NodeEntity nodeToMoveEntity = nodeToMoveOpt.orElseThrow(() -> new StudyException(NODE_NOT_FOUND));
 
-        nodesRepository.findAllByParentNodeIdNode(nodeToMoveUuid).stream()
+        nodesRepository.findAllByParentNodeIdNode(nodeToMoveUuid)
             .forEach(child -> child.setParentNode(nodeToMoveEntity.getParentNode()));
 
         Optional<NodeEntity> anchorNodeOpt = nodesRepository.findById(anchorNodeUuid);
@@ -429,8 +431,7 @@ public class NetworkModificationTreeService {
         nodes.stream()
                 .filter(n -> n.getParentNode() != null)
                 .forEach(node -> fullMap.get(node.getParentNode().getIdNode()).getChildren().add(fullMap.get(node.getIdNode())));
-        var parentNetworkModificationNode = (NetworkModificationNode) fullMap.get(parentNodeUuid);
-        return parentNetworkModificationNode;
+        return (NetworkModificationNode) fullMap.get(parentNodeUuid);
     }
 
     @Transactional
@@ -441,13 +442,12 @@ public class NetworkModificationTreeService {
         }
         UUID referenceParentNodeId = rootId != null ? rootId : nodeParentId;
 
-        nodeToDuplicate.getChildren().stream().forEach(sourceNode -> {
+        nodeToDuplicate.getChildren().forEach(sourceNode -> {
             UUID newModificationGroupId = UUID.randomUUID();
             UUID newReportUuid = UUID.randomUUID();
             UUID nextParentId = null;
 
-            if (sourceNode instanceof NetworkModificationNode) {
-                NetworkModificationNode model = (NetworkModificationNode) sourceNode;
+            if (sourceNode instanceof NetworkModificationNode model) {
                 UUID modificationGroupToDuplicateId = model.getModificationGroupUuid();
                 model.setModificationGroupUuid(newModificationGroupId);
                 model.setNodeBuildStatus(NodeBuildStatus.from(BuildStatus.NOT_BUILT));
@@ -545,7 +545,7 @@ public class NetworkModificationTreeService {
         List<String> studyNodeNames = networkModificationNodeInfoRepository.findAllByNodeStudyId(studyUuid)
                 .stream()
                 .map(AbstractNodeInfoEntity::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         String namePrefix = "N";
         String uniqueName = StringUtils.EMPTY;
@@ -561,7 +561,7 @@ public class NetworkModificationTreeService {
         List<String> studyNodeNames = networkModificationNodeInfoRepository.findAllByNodeStudyId(studyUuid)
                 .stream()
                 .map(AbstractNodeInfoEntity::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         String uniqueName = nodeName;
         int i = 1;
@@ -572,7 +572,7 @@ public class NetworkModificationTreeService {
         return uniqueName;
     }
 
-    @Transactional(readOnly = false)
+    @Transactional
     public String getVariantId(UUID nodeUuid) {
         return nodesRepository.findById(nodeUuid).map(n -> repositories.get(n.getType()).getVariantId(nodeUuid)).orElseThrow(() -> new StudyException(NODE_NOT_FOUND));
     }
@@ -696,13 +696,6 @@ public class NetworkModificationTreeService {
         nodesRepository.findById(nodeUuid).flatMap(n -> Optional.ofNullable(repositories.get(n.getType()).getComputationResultUuid(nodeUuid, SECURITY_ANALYSIS))).ifPresent(uuids::add);
         nodesRepository.findAllByParentNodeIdNode(nodeUuid)
             .forEach(child -> getSecurityAnalysisResultUuids(child.getIdNode(), uuids));
-    }
-
-    @Transactional(readOnly = true)
-    public List<UUID> getSecurityAnalysisResultUuidsFromNode(UUID nodeUuid) {
-        List<UUID> uuids = new ArrayList<>();
-        getSecurityAnalysisResultUuids(nodeUuid, uuids);
-        return uuids;
     }
 
     @Transactional(readOnly = true)
